Add Register Page

--- a/src/app/Shared/Component/footer/footer.component.html
+++ b/src/app/Shared/Component/footer/footer.component.html
@@ -8,10 +8,10 @@
             <form class="row g-3 w-100">
 
               <div class="col-10">
-                <input type="email" class="form-control" id="inputPassword2" placeholder="E-mail..">
+                <input type="email" class="form-control  form-control-lg" id="inputPassword2" placeholder="E-mail..">
               </div>
-              <div class="col-auto ms-auto">
-                <button type="submit" class="btn btn-success ">Share App Link</button>
+              <div class="col-2  p-0">
+                <button type="submit" class="btn btn-success   btn-lg w-100">Share App Link</button>
               </div>
             </form>
         </div>
