--- a/src/app/Shared/Component/header/header.component.html
+++ b/src/app/Shared/Component/header/header.component.html
@@ -37,8 +37,8 @@
         </div>
         <div class="col-lg-6 d-none d-lg-block">
           <div class="input-group ">
-            <input type="search" class="form-control" id="searchInput" placeholder="Search for products">
-            <span class="input-group-text" id="basic-addon2">
+            <input type="search" class="form-control"  placeholder="Search for products">
+            <span class="input-group-text">
                             <i data-feather="search" style="width: 20px; height: 20px;"></i>
             </span>
           </div>
@@ -54,7 +54,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-body-tertiary" >
+              <a class="nav-link text-body-tertiary" routerLink="Register">
                 <i data-feather="user"></i>
               </a>
             </li>
