--- a/src/app/Shared/Component/navbar/navbar.component.html
+++ b/src/app/Shared/Component/navbar/navbar.component.html
@@ -28,7 +28,17 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="Brands" routerLinkActive="active">Brands</a>
         </li>
-
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Account
+          </a>
+          <ul class="dropdown-menu ">
+            <li><a class="dropdown-item" routerLink="Signup-oldSchool">Signup Old School</a></li>
+            <li><a class="dropdown-item" routerLink="Register">Signup </a></li>
+            <li><a class="dropdown-item" routerLink="Login">Sign in</a></li>
+            <li><a class="dropdown-item" routerLink="">Forgot Password</a></li>
+          </ul>
+        </li>
 
       </ul>
 
