--- a/src/app/Shared/Component/navbar/navbar.component.html
+++ b/src/app/Shared/Component/navbar/navbar.component.html
@@ -36,7 +36,7 @@
             <li><a class="dropdown-item" routerLink="Signup-oldSchool">Signup Old School</a></li>
             <li><a class="dropdown-item" routerLink="Register">Signup </a></li>
             <li><a class="dropdown-item" routerLink="Login">Sign in</a></li>
-            <li><a class="dropdown-item" routerLink="">Forgot Password</a></li>
+            <li><a class="dropdown-item" routerLink="Forgot-Password">Forgot Password</a></li>
           </ul>
         </li>
 
