--- a/src/assets/Sass/components/_navbar.scss
+++ b/src/assets/Sass/components/_navbar.scss
@@ -5,6 +5,7 @@
     width: 100% !important;
     transform: translateX(0) !important;
     flex-direction: row;
+    z-index: unset;
     .offcanvas-body {
       width: 100%;
       padding: 0;
