--- a/src/app/Shared/Component/navbar/navbar.component.html
+++ b/src/app/Shared/Component/navbar/navbar.component.html
@@ -28,15 +28,17 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="Brands" routerLinkActive="active">Brands</a>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown" title="If you need to go to this page, you must Sign Out first.">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Account
           </a>
           <ul class="dropdown-menu ">
-            <li><a class="dropdown-item" routerLink="Signup-oldSchool">Signup Old School</a></li>
-            <li><a class="dropdown-item" routerLink="Register">Signup </a></li>
-            <li><a class="dropdown-item" routerLink="Login">Sign in</a></li>
-            <li><a class="dropdown-item" routerLink="Forgot-Password">Forgot Password</a></li>
+            <li><a class="dropdown-item" routerLink="Signup-oldSchool" title="If you need to go to this page, you must Sign Out first.">Signup Old School</a></li>
+            <li><a class="dropdown-item" routerLink="Register" title="If you need to go to this page, you must Sign Out first.">Signup </a></li>
+            <li><a class="dropdown-item" routerLink="Login" title="If you need to go to this page, you must Sign Out first.">Sign in</a></li>
+            <li><a class="dropdown-item" routerLink="Forgot-Password" title="If you need to go to this page, you must Sign Out first.">Forgot Password</a></li>
+            <li><a class="dropdown-item" routerLink="Verify-Code" title="If you need to go to this page, you must Sign Out first.">Verify Code</a></li>
+            <li><a class="dropdown-item" routerLink="Reset-Password" title="If you need to go to this page, you must Sign Out first.">Reset Password</a></li>
           </ul>
         </li>
 
