--- a/src/app/Authorisation/Components/forgot-password/forgot-password.component.html
+++ b/src/app/Authorisation/Components/forgot-password/forgot-password.component.html
@@ -1,1 +1,35 @@
-<p>forgot-password works!</p>
+<section class="forgot-password  ">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-lg-6">
+        <div class="image">
+
+          <img src="./assets/images/fp-g.svg" alt="" class=" w-100">
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <h2 class="fw-bold">Forgot your password?
+        </h2>
+        <p>Please enter the email address associated with your account and We will email you a link to reset your password.
+        </p>
+        <div class="alert alert-danger" role="alert" *ngIf="apiErrorMassage">
+          {{apiErrorMassage}}
+        </div>
+        <form  class="form p-0 w-100" (ngSubmit)="forgotPassword()" [formGroup]="ForgotPasswordForm">
+          <div class="form-floating mb-3">
+            <input type="email" class="form-control" formControlName="email" id="floatingInput" placeholder="name@example.com">
+            <label for="floatingInput">Email address</label>
+            <div class="text-danger">
+              <small *ngIf="ForgotPasswordForm.get('email')?.hasError('required') && ForgotPasswordForm.get('email')?.touched">Email is required</small>
+              <small *ngIf="ForgotPasswordForm.get('email')?.hasError('email') && ForgotPasswordForm.get('email')?.touched">Email is invalid</small>
+            </div>
+          </div>
+
+          <button class="btn btn-success btn-lg w-100 mb-3" [disabled]="ForgotPasswordForm.invalid">Reset Password</button>
+          <button class="btn btn-light btn-lg w-100 mb-3" routerLink="/">Back</button>
+
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
