--- a/src/app/Authorisation/Components/login/login.component.html
+++ b/src/app/Authorisation/Components/login/login.component.html
@@ -1,8 +1,10 @@
-<section class="login py-5 my-5">
+<section class="login ">
   <div class="container">
-    <div class="row">
+    <div class="row align-items-center">
       <div class="col-lg-6">
-        <img src="./assets/images/signin-g.svg" alt="">
+        <div class="image">
+          <img src="./assets/images/signin-g.svg" alt="" class=" w-100">
+        </div>
       </div>
       <div class="col-lg-6">
         <h2 class="fw-bold">Sign in to FreshCart        </h2>
