--- a/src/app/Shared/Component/not-found/not-found.component.html
+++ b/src/app/Shared/Component/not-found/not-found.component.html
@@ -1,1 +1,20 @@
-<p>not-found works!</p>
+<section class="not-found py-5 my-5">
+  <div class="container py-5">
+    <div class="row py-5 align-items-center justify-content-center">
+      <div class="col-lg-4">
+        <div class="content">
+          <h1 class="fw-bold">Something’s wrong here...
+          </h1>
+          <p>We can’t find the page you’re looking for.
+          </p>
+          <a href="/" class="btn btn-success">Go back to home</a>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="image">
+          <img src="../../../../assets/images/error.svg" alt="" class="w-100">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
