--- a/src/app/Component/cart/cart.component.html
+++ b/src/app/Component/cart/cart.component.html
@@ -1,1 +1,88 @@
-<p>cart works!</p>
+<section class="cart-page py-5">
+  <ng-container *ngIf="cartItems?.products.length == 0 || cartItems == null; else elseTemplate">
+    <div class="container" >
+      <h1 class="text-center">There is no fond Data </h1>
+    </div>
+  </ng-container>
+  <ng-template #elseTemplate>
+    <div class="container">
+      <h4>Shop Cart</h4>
+      <div class="border-bottom pb-3 mb-5  d-flex justify-content-between align-items-center">
+        <p class="fw-bold mb-0">Total Cart Price : {{ cartItems?.totalCartPrice}}
+        </p>
+        <button class="btn btn-outline-danger btn-sm" (click)="deleteCart()">Clear Cart</button>
+      </div>
+      <div class="row">
+        <div class="col-md-8 col-sm-12">
+          <div class="overflow" style="max-height: 500px; overflow-y: auto;" >
+
+            <div class="row-card d-flex border-bottom py-3 align-items-center" *ngFor="let cartItem of cartItems?.products">
+              <div class="image me-2">
+                <img [src]="cartItem.product.imageCover" [alt]="cartItem.product.title" class="img-thumbnail" width="75" height="75">
+              </div>
+              <div class="card-body    w-100">
+                <div class="row align-items-center g-3 m-0">
+                  <div class="info col-7">
+                    <a [routerLink]="['/Product/',cartItem.product._id]" class="d-block"><h5 class="text-black">{{cartItem.product.title.split(' ').slice(0,4).join(' ')}}</h5></a>
+                    <button class="btn btn-sm btn-outline-danger" (click)="removeCartItem(cartItem.product._id)"><i class="fa-solid fa-trash-can me-2"></i> Remove</button>
+                  </div>
+                  <div class="col-2">
+                    <div class="quantity input-group input-group-sm   text-center">
+                      <button class=" input-group-text" (click)="updateCartItem(cartItem.product._id, cartItem.count + 1)"><i class="fa-solid fa-plus"></i>  </button>
+                      <input type="number" class="form-control text-center" [(ngModel)]="cartItem.count" >
+                      <button class=" input-group-text" (click)="updateCartItem(cartItem.product._id,  cartItem.count - 1)"><i class="fa-solid fa-minus "></i></button>
+                      </div>
+
+                  </div>
+                    <div class="price col-3 text-end ">
+                      <h5 class="text-black">${{ (cartItem.price * cartItem.count) |  number:'1.0-0' }}</h5>
+                    </div>
+
+                </div>
+                </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-12">
+          <div class="card-summary border rounded p-3">
+            <h4>Summary</h4>
+            <ul class="list-group ">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                <div class="">Item Subtotal</div>
+                <div class="fw-medium">${{ cartItems?.totalCartPrice! -  ((cartItems?.totalCartPrice! * 14) / 100) |  number:'1.0-0'}}</div>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                <div class="">Service Fee
+                </div>
+                <div class="fw-medium">$14</div>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                <div class="">Subtotal</div>
+                <div class="fw-medium">${{ cartItems?.totalCartPrice |  number:'1.0-0'}}</div>
+              </li>
+
+            </ul>
+            <button class=" my-3 btn btn-success d-flex justify-content-between w-100">
+              <span>                                 Go to Checkout
+              </span>
+              <span class="fw-medium">${{ cartItems?.totalCartPrice |  number:'1.0-0'}}</span>
+            </button>
+            <small class="text-secondary mb-3 d-block">By placing your order, you agree to be bound by the Freshcart Terms of Service and Privacy Policy.
+
+            </small>
+            <h5>Add Promo or Gift Card
+            </h5>
+            <input type="text" class="form-control mb-2" placeholder="Enter Promo or Gift Card Code">
+            <button class="btn btn-outline-dark w-100 d-block mb-1">Redeem</button>
+            <small class="text-secondary">Terms & Conditions apply
+
+            </small>
+          </div>
+        </div>
+      </div>
+    </div>
+  </ng-template>
+
+
+
+</section>
