--- a/src/app/Component/categories-card/categories-card.component.html
+++ b/src/app/Component/categories-card/categories-card.component.html
@@ -1,4 +1,7 @@
-<div class="card p-3 ">
-  <img src="./assets/images/categories/category-chicken-meat-fish.jpg" alt="" class="mb-2">
-  <h6 class="text-center">Dairy, Bread & Eggs</h6>
+<a [routerLink]="['/Specific-Catrgories/', category._id]"
+>
+<div class="card p-3 rounded-3">
+  <img [src]="category.image" alt="" class="mb-2 w-100 object-fit-cover" height="200">
+  <h6 class="text-center">{{category.name}}</h6>
 </div>
+</a>
