--- a/src/app/Component/categories/categories.component.html
+++ b/src/app/Component/categories/categories.component.html
@@ -1,9 +1,18 @@
 <section class="categories  pt-3 pb-5">
   <div class="container">
-    <h2 class="fw-bold mb-4">Popular Products
-    </h2>
-    <div class="row row-cols-6">
-      <app-categories-card></app-categories-card>
+    <h4 class="fw-bold mb-4">Featured Categories
+
+    </h4>
+
+      <owl-carousel-o [options]="customOptions">
+
+        <ng-container *ngFor="let slide of categoriesList">
+          <ng-template carouselSlide >
+            <app-categories-card [category]="slide"></app-categories-card>
+          </ng-template>
+        </ng-container>
+
+      </owl-carousel-o>
     </div>
-  </div>
+
 </section>
