--- a/src/app/Component/home/home.component.html
+++ b/src/app/Component/home/home.component.html
@@ -7,35 +7,30 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="card position-relative">
-            <div class="card-body position-absolute start-0 top-50 translate-middle-y">
-              <h3 class="card-title mb-0 fw-bold">Fruits & Vegetables
-              </h3>
-              <p class="card-text ">Get Upto 30% Off
-
-              </p>
+            <div
+              class="card-body position-absolute start-0 top-50 translate-middle-y"
+            >
+              <h3 class="card-title mb-0 fw-bold">Fruits & Vegetables</h3>
+              <p class="card-text">Get Upto 30% Off</p>
               <a href="#" class="btn btn-dark">Shop Now</a>
             </div>
-            <img src="./assets/images/grocery-banner.png" alt="">
+            <img src="./assets/images/grocery-banner.png" alt="" />
           </div>
         </div>
         <div class="col-lg-6">
           <div class="card position-relative">
-            <div class="card-body position-absolute start-0 top-50 translate-middle-y">
-              <h3 class="card-title mb-0 fw-bold">Freshly Baked Buns
-
-              </h3>
-              <p class="card-text ">Get Upto 25% Off
-
-
-
-              </p>
+            <div
+              class="card-body position-absolute start-0 top-50 translate-middle-y"
+            >
+              <h3 class="card-title mb-0 fw-bold">Freshly Baked Buns</h3>
+              <p class="card-text">Get Upto 25% Off</p>
               <a href="#" class="btn btn-dark">Shop Now</a>
             </div>
-            <img src="./assets/images/grocery-banner-2.jpg" alt="">
+            <img src="./assets/images/grocery-banner-2.jpg" alt="" />
           </div>
         </div>
       </div>
     </div>
   </section>
-<app-brands></app-brands>
+  <app-brands></app-brands>
 </section>
