--- a/src/app/Shared/Component/header/header.component.html
+++ b/src/app/Shared/Component/header/header.component.html
@@ -133,7 +133,7 @@
   <div class="offcanvas-footer p-3">
     <div class="d-flex justify-content-between">
       <a href="" class="btn btn-success" routerLink="/Cart">Continue Shopping</a>
-      <button class="btn btn-outline-secondary" (click)="deleteCart()"> Rest Cart</button>
+      <button class="btn btn-outline-secondary" > Rest Cart</button>
     </div>
   </div>
 </div>
