--- a/src/app/Component/cart/cart.component.html
+++ b/src/app/Component/cart/cart.component.html
@@ -10,7 +10,7 @@
       <div class="border-bottom pb-3 mb-5  d-flex justify-content-between align-items-center">
         <p class="fw-bold mb-0">Total Cart Price : {{ cartItems?.totalCartPrice}}
         </p>
-        <button class="btn btn-outline-danger btn-sm" (click)="deleteCart()">Clear Cart</button>
+        <button class="btn btn-outline-danger btn-sm" (click)="deleteCart()"><i class="fa-solid fa-trash-can me-2"></i>Clear Cart</button>
       </div>
       <div class="row">
         <div class="col-md-8 col-sm-12">
@@ -62,11 +62,11 @@
               </li>
 
             </ul>
-            <button class=" my-3 btn btn-success d-flex justify-content-between w-100">
+            <a [routerLink]="['/shipping-address',cartItems._id]" class=" my-3 btn btn-success d-flex justify-content-between w-100">
               <span>                                 Go to Checkout
               </span>
               <span class="fw-medium">${{ cartItems?.totalCartPrice |  number:'1.0-0'}}</span>
-            </button>
+            </a>
             <small class="text-secondary mb-3 d-block">By placing your order, you agree to be bound by the Freshcart Terms of Service and Privacy Policy.
 
             </small>
