--- a/src/app/Component/categories-card/categories-card.component.html
+++ b/src/app/Component/categories-card/categories-card.component.html
@@ -1,7 +1,7 @@
 <a [routerLink]="['/Specific-Catrgories/', category._id]"
 >
-<div class="card p-3 rounded-3">
-  <img [src]="category.image" alt="" class="mb-2 w-100 object-fit-cover" height="200">
+<div class="card p-2 rounded-3">
+  <img [src]="category.image" alt="" class="mb-3 w-100 object-fit-cover rounded-2" height="200">
   <h6 class="text-center">{{category.name}}</h6>
 </div>
 </a>
