--- a/src/app/Component/product-details/product-details.component.html
+++ b/src/app/Component/product-details/product-details.component.html
@@ -66,7 +66,7 @@
           </div>
           <div class="action border-bottom pb-3 mb-3">
             <button class="btn btn-success me-2 px-4" (click)="addCartItem(productDetails?._id!)"><i class="fa-solid fa-cart-arrow-down me-1"></i> Add to cart</button>
-            <button class="favorite btn btn-outline-danger me-2"><i class="fa-solid fa-heart "></i></button>
+            <button class="favorite btn  me-2" (click)="addWish(productDetails?._id!)" [class]="addFavorite? 'btn-danger':'btn-outline-danger'"><i class=" fa-heart " [class]="addFavorite?'fas':'fa-regular'"></i></button>
           </div>
           <p>
             <span class="w-25 d-inline-block">Brand :</span>
