--- a/src/app/Shared/Component/footer/footer.component.html
+++ b/src/app/Shared/Component/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer pt-5">
+<footer class="footer pt-5" #footer id="footer">
   <div class="footer-contact mb-4">
     <div class="container">
       <div class="row">
