--- a/src/assets/Sass/pages/_categories.scss
+++ b/src/assets/Sass/pages/_categories.scss
@@ -2,12 +2,14 @@
   .owl-carousel {
     .owl-nav {
       position: absolute;
-      top: -85px;
+      top: -65px;
       inset-inline-end: 0;
+      margin: 0;
       div {
         background-color: transparent !important;
         color: #889397;
         font-size: 28px;
+        margin: 0;
         &:hover {
           color: $success;
         }
