--- a/src/app/Authorisation/Components/login/login.component.html
+++ b/src/app/Authorisation/Components/login/login.component.html
@@ -10,7 +10,7 @@
         <h2 class="fw-bold">Sign in to FreshCart        </h2>
         <p>Welcome back to FreshCart! Enter your email to get started.
         </p>
-        <p>Can You Test For example user name : {{emailExample}} , password : Test123
+        <p>Can You Test For example <br> user name : {{emailExample}} ,<br> password : Test123
         </p>
         <div class="alert alert-danger" role="alert" *ngIf="apiErrorMassage">
           {{apiErrorMassage}}
